--- a/src/carback.ui
+++ b/src/carback.ui
@@ -84,22 +84,5 @@
   </layout>
  </widget>
  <resources/>
- <connections>
-  <connection>
-   <sender>pushButton_2</sender>
-   <signal>clicked()</signal>
-   <receiver>CarBack</receiver>
-   <slot>reject()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>57</x>
-     <y>431</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>245</x>
-     <y>224</y>
-    </hint>
-   </hints>
-  </connection>
- </connections>
+ <connections/>
 </ui>
