--- a/src/newclient.ui
+++ b/src/newclient.ui
@@ -85,7 +85,7 @@
         </widget>
        </item>
        <item row="0" column="2" colspan="3">
-        <widget class="QLineEdit" name="lineEdit"/>
+        <widget class="QLineEdit" name="drLicIn"/>
        </item>
        <item row="1" column="0">
         <widget class="QLabel" name="label_2">
@@ -95,7 +95,7 @@
         </widget>
        </item>
        <item row="1" column="2" colspan="3">
-        <widget class="QLineEdit" name="lineEdit_2"/>
+        <widget class="QLineEdit" name="FioIn"/>
        </item>
        <item row="2" column="0">
         <widget class="QLabel" name="label_3">
@@ -105,7 +105,7 @@
         </widget>
        </item>
        <item row="2" column="2" colspan="3">
-        <widget class="QLineEdit" name="lineEdit_3"/>
+        <widget class="QLineEdit" name="PassIn"/>
        </item>
        <item row="3" column="0">
         <widget class="QLabel" name="label_4">
@@ -115,7 +115,7 @@
         </widget>
        </item>
        <item row="3" column="2" colspan="3">
-        <widget class="QLineEdit" name="lineEdit_4"/>
+        <widget class="QLineEdit" name="HomeAdrIn"/>
        </item>
        <item row="4" column="0">
         <widget class="QLabel" name="label_9">
